Fix export on Firefox

--- a/src/scripts/components/preview/preview-overlay.scss
+++ b/src/scripts/components/preview/preview-overlay.scss
@@ -11,7 +11,7 @@
     left: -2000px;
     position: absolute;
     width: 960px;
-    top: -500000%;
+    top: -500000px;
   }
 
   .preview-content {
